--- a/ref.html
+++ b/ref.html
@@ -2,19 +2,18 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Test demo</title>
+    <title>Networkflow - References</title>
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <script src="index.js"></script>
 </head>
-
 
 
 <body>
 
 <div class="title">
     <h1>NETWORK FLOW</h1>
-    <h2> Introduction </h2>
+    <h2> References </h2>
 </div>
+
 
 <div class="nav-back">
     <div class="nav">
@@ -30,31 +29,25 @@
 </div>
 
 
-<div class="section" id="problem_intro_sec">
+
+<div class="section" >
     <div class="sec_title">
-        <p>&nbsp &nbsp &nbsp Problem Introduction</p>
+        <p>&nbsp &nbsp &nbsp References</p>
     </div>
-    <div class="content" id="problem_intro_con">
-        <a href="https://en.wikipedia.org/wiki/Flow_network">wikipedia</a>
-        <p>Introduction to the problem</p>
+    <div class="content">
+        <p>CLRS. etc etc</p>
     </div>
 </div>
 
-
-<div class="section" id="input_sec">
-    <div class="sec_title">
-        <p>&nbsp &nbsp &nbsp Input and Output</p>
-    </div>
-    <div class="content" id="input_con">
-        <p>Input and Output</p>
-    </div>
-</div>
 
 
 
 <div class="bottom">
   <p>Yuye.Jiang@tufts.edu  &nbsp &nbsp &nbsp  Comp150-ALG-Summer2020</p>
 </div>
+
+
+<script src="script.js"></script>
 
 </body>
 </html>
