--- a/pr.html
+++ b/pr.html
@@ -2,18 +2,16 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Test demo</title>
+    <title>Networkflow - Push-relabel</title>
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <script src="index.js"></script>
 </head>
-
 
 
 <body>
 
 <div class="title">
     <h1>NETWORK FLOW</h1>
-    <h2> Introduction </h2>
+    <h2> Push-relabel Algorithm </h2>
 </div>
 
 <div class="nav-back">
@@ -32,29 +30,39 @@
 
 <div class="section" id="problem_intro_sec">
     <div class="sec_title">
-        <p>&nbsp &nbsp &nbsp Problem Introduction</p>
+        <p>&nbsp &nbsp &nbsp Basic of Push-relabel</p>
     </div>
     <div class="content" id="problem_intro_con">
-        <a href="https://en.wikipedia.org/wiki/Flow_network">wikipedia</a>
-        <p>Introduction to the problem</p>
+        <p>algorithm</p>
     </div>
 </div>
 
 
-<div class="section" id="input_sec">
+<div class="section" id="def_sec">
     <div class="sec_title">
-        <p>&nbsp &nbsp &nbsp Input and Output</p>
+        <p>&nbsp &nbsp &nbsp Demo of Push-relabel</p>
     </div>
-    <div class="content" id="input_con">
-        <p>Input and Output</p>
+    <div class="content" id="def_con">
+        <p>Demo</p>
     </div>
 </div>
 
+
+<div class="section" id="res_sec">
+    <div class="sec_title">
+        <p>&nbsp &nbsp &nbsp Runtime of Push-relabel</p>
+    </div>
+    <div class="content" id="res_con">
+        <p>runtime, click to see proof</p>
+    </div>
+</div>
 
 
 <div class="bottom">
   <p>Yuye.Jiang@tufts.edu  &nbsp &nbsp &nbsp  Comp150-ALG-Summer2020</p>
 </div>
+
+<script src="script.js"></script>
 
 </body>
 </html>
