modified index page

--- a/ref.html
+++ b/ref.html
@@ -36,6 +36,8 @@
     </div>
     <div class="content">
         <p>CLRS. etc etc</p>
+        <p>Draw an arrow in svg: http://static.kancloud.cn/digest/d3-medium/195058</p>
+        <p>Line animation in svg: https://css-tricks.com/svg-line-animation-works/</p>
     </div>
 </div>
 
