--- a/concept.html
+++ b/concept.html
@@ -34,8 +34,11 @@
         <p>&nbsp &nbsp &nbsp Intuition - How to make the flow larger?</p>
     </div>
     <div class="content" id="problem_intro_con">
-        <p>No loop</p>
-        <p>Add flow on a possible path</p>
+        <ul>
+            <li>Don't send anything back in a loop - that takes capacity</li>
+            
+            <li>Don't send anything back in a loop - that takes capacity</li>
+        </ul>
     </div>
 </div>
 
