--- a/ref.html
+++ b/ref.html
@@ -38,6 +38,7 @@
         <p>CLRS. etc etc</p>
         <p>Draw an arrow in svg: http://static.kancloud.cn/digest/d3-medium/195058</p>
         <p>Line animation in svg: https://css-tricks.com/svg-line-animation-works/</p>
+        <p>Generate random color in css: https://css-tricks.com/snippets/javascript/random-hex-color/</p>
     </div>
 </div>
 
