--- a/popups/26_1.html
+++ b/popups/26_1.html
@@ -9,6 +9,7 @@
 <body>
 
 <h1> Lemma 26.1</h1>
+<p><b>Click green parts can see explaination</b></p>
 
  <div class="section" >
     <div class="sec_title">
@@ -103,6 +104,8 @@
             <p> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
                 = <span id="12">&sum; <sub>v &isin; V</sub>(f &uarr; f')(v,u) </span>
                <span id="12_hint" style="visibility:hidden;">That follows definition of (f &uarr; f')(v,u)</span></p>
+            
+            <img src="../img/261_1.JPG" alt="261" style="margin:20px"/>
    
     </div>
 </div>
@@ -190,6 +193,9 @@
             <span id="20">|f| + |'f| </span>
             <span id="20_hint" style="visibility:hidden;">By definition of flow value</span>
         </p>
+        
+        <img src="../img/261_2.JPG" alt="261" style="margin:20px"/>
+   
     </div>
 </div>
 
