--- a/popups/26_3.html
+++ b/popups/26_3.html
@@ -10,6 +10,8 @@
 
 
 <h1> Corollary 26.3</h1>
+<p><b>Click green parts can see explaination</b></p>
+
 
 <div class="section" >
     <div class="sec_title">
