--- a/popups/26_4.html
+++ b/popups/26_4.html
@@ -9,6 +9,7 @@
 <body>
 
 <h1> Lemma 26.4</h1>
+<p><b>Click green parts can see explaination</b></p>
 
  <div class="section" >
     <div class="sec_title">
@@ -150,6 +151,8 @@
             &sum; <sub>u &isin; S</sub> &sum; <sub>v &isin; T</sub> f(u,v) 
             -  &sum; <sub>u &isin; S</sub> &sum; <sub>v &isin; T</sub> f(v,u)</span> 
         </p>
+
+        <img src="../img/264_1.JPG" alt="264" style="margin:20px"/>
     
     </div>
 </div>
