--- a/ref.html
+++ b/ref.html
@@ -20,8 +20,9 @@
         <ul>
             <li><a href="./index.html">Introduction</a></li>
             <li><a href="./concept.html">Basic Concepts</a></li>
-            <li><a href="./ff.html">Ford-Fulkerson Method</a></li>
-            <li><a href="./pr.html">Push-relabel Algorithm</a></li>
+            <li><a href="./ff.html">Ford-Fulkerson</a></li>
+            <li><a href="./ek.html">Edmonds-Karp</a></li>
+            <li><a href="./lemma.html">Lemmas and Corollaries</a></li>
             <li><a href="./resource.html">Resources</a></li>
             <li><a href="./ref.html">References</a></li>
         </ul>
@@ -35,7 +36,9 @@
         <p>&nbsp &nbsp &nbsp References</p>
     </div>
     <div class="content">
-        <p>CLRS. etc etc</p>
+        <p><b>Algorithm:</b></p>
+        <p>Cormen, Thomas H, and Thomas H. Cormen. Introduction to Algorithms. Cambridge, Mass: MIT Press, 2001.</p>
+        <p><b>Webdesign:</b></p>
         <p>Draw an arrow in svg: http://static.kancloud.cn/digest/d3-medium/195058</p>
         <p>Line animation in svg: https://css-tricks.com/svg-line-animation-works/</p>
         <p>Generate random color in css: https://css-tricks.com/snippets/javascript/random-hex-color/</p>
