--- a/resource.html
+++ b/resource.html
@@ -20,8 +20,9 @@
         <ul>
             <li><a href="./index.html">Introduction</a></li>
             <li><a href="./concept.html">Basic Concepts</a></li>
-            <li><a href="./ff.html">Ford-Fulkerson Method</a></li>
-            <li><a href="./pr.html">Push-relabel Algorithm</a></li>
+            <li><a href="./ff.html">Ford-Fulkerson</a></li>
+            <li><a href="./ek.html">Edmonds-Karp</a></li>
+            <li><a href="./lemma.html">Lemmas and Corollaries</a></li>
             <li><a href="./resource.html">Resources</a></li>
             <li><a href="./ref.html">References</a></li>
         </ul>
