--- a/ek.html
+++ b/ek.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Networkflow - Push-relabel</title>
+    <title>Networkflow - Edmonds-Karp Algorithm</title>
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 
@@ -11,7 +11,7 @@
 
 <div class="title">
     <h1>NETWORK FLOW</h1>
-    <h2> Push-relabel Algorithm </h2>
+    <h2> Edmonds-Karp Algorithm </h2>
 </div>
 
 <div class="nav-back">
@@ -21,7 +21,7 @@
             <li><a href="./concept.html">Basic Concepts</a></li>
             <li><a href="./ff.html">Ford-Fulkerson</a></li>
             <li><a href="./ek.html">Edmonds-Karp</a></li>
-            <li><a href="./lemma.html">Lemmas and Corollarys</a></li>
+            <li><a href="./lemma.html">Lemmas and Corollaries</a></li>
             <li><a href="./resource.html">Resources</a></li>
             <li><a href="./ref.html">References</a></li>
         </ul>
