--- a/lemma.html
+++ b/lemma.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Networkflow - Push-relabel</title>
+    <title>Networkflow - Lemmas</title>
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 
@@ -11,7 +11,7 @@
 
 <div class="title">
     <h1>NETWORK FLOW</h1>
-    <h2> Push-relabel Algorithm </h2>
+    <h2> Lemmas </h2>
 </div>
 
 <div class="nav-back">
